export const snapshot = {};

snapshot[`Decode message 1`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 32,
      TTL: 4499,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_http",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 2`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 5,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "b",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "db",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "r",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "dr",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "lb",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 3`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "169",
        "254",
        "22 ",
        "58",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::c5b:7534:952d:163a",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "test",
          "_service",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 33,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {},
      RDLENGTH: 1,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 21,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 26,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9090,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 33,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 4,
    ARCOUNT: 4,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 4`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
    {
      CLASS: 1,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9090,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 12,
      TTL: 120,
      TYPE: 33,
    },
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 1,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 32769,
      QNAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      QTYPE: 255,
    },
  ],
}
`;

snapshot[`Decode message 5`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      RDATA: {
        bs: Uint8Array(12) [
          49,
          49,
          49,
          70,
          67,
          65,
          51,
          67,
          57,
          49,
          49,
          49,
        ],
        ca: Uint8Array(4) [
          52,
          49,
          48,
          49,
        ],
        fn: Uint8Array(14) [
          83,
          111,
          109,
          101,
          67,
          104,
          114,
          111,
          109,
          101,
          99,
          97,
          115,
          116,
        ],
        ic: Uint8Array(15) [
          47,
          115,
          101,
          116,
          117,
          112,
          47,
          105,
          99,
          111,
          110,
          46,
          112,
          110,
          103,
        ],
        id: Uint8Array(32) [
          51,
          49,
          49,
          49,
          100,
          48,
          101,
          51,
          52,
          102,
          98,
          50,
          100,
          49,
          49,
          101,
          100,
          49,
          49,
          49,
          57,
          99,
          56,
          49,
          49,
          49,
          49,
          101,
          56,
          49,
          49,
          49,
        ],
        md: Uint8Array(10) [
          67,
          104,
          114,
          111,
          109,
          101,
          99,
          97,
          115,
          116,
        ],
        rm: Uint8Array(16) [
          49,
          49,
          49,
          54,
          70,
          66,
          52,
          55,
          70,
          53,
          49,
          70,
          56,
          49,
          49,
          49,
        ],
        rs: null,
        st: Uint8Array(1) [
          48,
        ],
        ve: Uint8Array(2) [
          48,
          53,
        ],
      },
      RDLENGTH: 146,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 8009,
        priority: 0,
        target: [
          "SomeChromecast",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 28,
      TTL: 120,
      TYPE: 33,
    },
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "local",
      ],
      RDATA: [
        "192",
        "168",
        "1 ",
        "4",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 3,
    OPCODE: 0,
    QDCOUNT: 2,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      QTYPE: 255,
    },
    {
      QCLASS: 1,
      QNAME: [
        "SomeChromecast",
        "local",
      ],
      QTYPE: 255,
    },
  ],
}
`;

snapshot[`Decode message 6`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      RDATA: [
        "E3CA3693F4EB@RuneAudio",
        "_raop",
        "_tcp",
        "local",
      ],
      RDLENGTH: 41,
      TTL: 4180,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 4,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 32769,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_airplay",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_airplay",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 7`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 5,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "b",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "db",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "r",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "dr",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "lb",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 8`] = `
{
  additional: [
    {
      CLASS: 1440,
      NAME: [
      ],
      RDATA: Uint8Array(12) [
        0,
        4,
        0,
        8,
        0,
        11,
        0,
        35,
        20,
        217,
        197,
        208,
      ],
      RDLENGTH: 12,
      TTL: 4500,
      TYPE: 41,
    },
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      RDATA: [
        "E3CA3693F4EB@RuneAudio",
        "_raop",
        "_tcp",
        "local",
      ],
      RDLENGTH: 41,
      TTL: 4460,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 1,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 8,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_apple-mobdev",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "41c60515",
        "_sub",
        "_apple-mobdev2",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "b",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "db",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "r",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "dr",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "lb",
        "_dns-sd",
        "_udp",
        "0.0.254.169.in-addr.arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 9`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "169",
        "254",
        "22 ",
        "58",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::c5b:7534:952d:163a",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "Test",
          "_testlargetxt",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 38,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA: true,
        BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB: true,
        CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC: true,
        DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD: true,
        EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE: true,
        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF: true,
        GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG: true,
        HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH: true,
        IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII: true,
        JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ: true,
        KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK: true,
        LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL: true,
        MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM: true,
        NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN: true,
        OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO: true,
        PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP: true,
        QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ: true,
        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR: true,
        SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS: true,
        TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT: true,
        UUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU: true,
        VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV: true,
        WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW: true,
        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX: true,
        YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY: true,
        ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ: true,
        "[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[": true,
        "\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\": true,
        "]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]": true,
        "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^": true,
        _______________________________: true,
        "\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`": true,
      },
      RDLENGTH: 1024,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDLENGTH: 26,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDLENGTH: 31,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9029,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 33,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 4,
    ARCOUNT: 4,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 10`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 13,
      TTL: 4250,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_dacp",
        "_tcp",
        "local",
      ],
      RDLENGTH: 8,
      TTL: 4451,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_workstation",
        "_tcp",
        "local",
      ],
      RDLENGTH: 15,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_smb",
        "_tcp",
        "local",
      ],
      RDLENGTH: 7,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_device-info",
        "_tcp",
        "local",
      ],
      RDLENGTH: 15,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_teamviewer",
        "_tcp",
        "local",
      ],
      RDLENGTH: 14,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_conductor",
        "_tcp",
        "local",
      ],
      RDLENGTH: 13,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_calibre",
        "_tcp",
        "local",
      ],
      RDLENGTH: 11,
      TTL: 3600,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_stanza",
        "_tcp",
        "local",
      ],
      RDLENGTH: 10,
      TTL: 3600,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 9,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 11`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "169",
        "254",
        "22 ",
        "58",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::c5b:7534:952d:163a",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 8,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "test",
          "_service",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 9,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {},
      RDLENGTH: 1,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9090,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 12,
      TTL: 120,
      TYPE: 33,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 4,
    ARCOUNT: 4,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 12`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testupdate",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "Test",
          "_testupdate",
          "_tcp",
          "local",
        ],
        types: [
          13,
          16,
          33,
        ],
      },
      RDLENGTH: 36,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testupdate",
        "_tcp",
        "local",
      ],
      RDATA: Uint8Array(14) [
        2,
        80,
        67,
        10,
        87,
        105,
        110,
        100,
        111,
        119,
        115,
        32,
        88,
        80,
      ],
      RDLENGTH: 14,
      TTL: 4500,
      TYPE: 13,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 1,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 13`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 7,
      TTL: 0,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 14`] = `
{
  additional: [
    {
      CLASS: 1440,
      NAME: [
      ],
      RDATA: Uint8Array(12) [
        0,
        4,
        0,
        8,
        0,
        11,
        0,
        35,
        20,
        217,
        197,
        208,
      ],
      RDLENGTH: 12,
      TTL: 4500,
      TYPE: 41,
    },
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      RDATA: [
        "E3CA3693F4EB@RuneAudio",
        "_raop",
        "_tcp",
        "local",
      ],
      RDLENGTH: 25,
      TTL: 4460,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 1,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 8,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_apple-mobdev",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "41c60515",
        "_sub",
        "_apple-mobdev2",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "b",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "db",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "r",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "dr",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "lb",
        "_dns-sd",
        "_udp",
        "0",
        "0",
        "254",
        "169",
        "in-addr",
        "arpa",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 1,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 15`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDLENGTH: 26,
      TTL: 0,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 16`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
    {
      CLASS: 1,
      NAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9090,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 33,
    },
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 1,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 32769,
      QNAME: [
        "test",
        "_service",
        "_tcp",
        "local",
      ],
      QTYPE: 255,
    },
  ],
}
`;

snapshot[`Decode message 17`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "BOX@TuneBlade",
          "_http",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 9,
      TTL: 4500,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "7",
        "1",
        "168",
        "192",
        "in-addr",
        "arpa",
      ],
      RDATA: {
        nextDomainName: [
          "7",
          "1",
          "168",
          "192",
          "in-addr",
          "arpa",
        ],
        types: [
          12,
        ],
      },
      RDLENGTH: 6,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "0",
        "3",
        "B",
        "7",
        "C",
        "7",
        "6",
        "1",
        "6",
        "2",
        "A",
        "1",
        "0",
        "C",
        "8",
        "6",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "8",
        "E",
        "F",
        "ip6",
        "arpa",
      ],
      RDATA: {
        nextDomainName: [
          "0",
          "3",
          "B",
          "7",
          "C",
          "7",
          "6",
          "1",
          "6",
          "2",
          "A",
          "1",
          "0",
          "C",
          "8",
          "6",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "8",
          "E",
          "F",
          "ip6",
          "arpa",
        ],
        types: [
          12,
        ],
      },
      RDLENGTH: 6,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 8,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 1440,
      NAME: [
      ],
      RDATA: Uint8Array(12) [
        0,
        4,
        0,
        8,
        0,
        11,
        0,
        35,
        20,
        217,
        197,
        208,
      ],
      RDLENGTH: 12,
      TTL: 4500,
      TYPE: 41,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        Password: Uint8Array(5) [
          70,
          97,
          108,
          115,
          101,
        ],
      },
      RDLENGTH: 15,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 51497,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 12,
      TTL: 120,
      TYPE: 33,
    },
    {
      CLASS: 32769,
      NAME: [
        "7",
        "1",
        "168",
        "192",
        "in-addr",
        "arpa",
      ],
      RDATA: [
        "box",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 120,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "0",
        "3",
        "B",
        "7",
        "C",
        "7",
        "6",
        "1",
        "6",
        "2",
        "A",
        "1",
        "0",
        "C",
        "8",
        "6",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "8",
        "E",
        "F",
        "ip6",
        "arpa",
      ],
      RDATA: [
        "box",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 120,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "192",
        "168",
        "1 ",
        "7",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::68c0:1a26:167c:7b30",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 8,
    ARCOUNT: 5,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 18`] = `
{
  additional: [
  ],
  answer: [
  ],
  authority: [
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      RDATA: {
        bs: Uint8Array(12) [
          49,
          49,
          49,
          70,
          67,
          65,
          51,
          67,
          57,
          49,
          49,
          49,
        ],
        ca: Uint8Array(4) [
          52,
          49,
          48,
          49,
        ],
        fn: Uint8Array(14) [
          83,
          111,
          109,
          101,
          67,
          104,
          114,
          111,
          109,
          101,
          99,
          97,
          115,
          116,
        ],
        ic: Uint8Array(15) [
          47,
          115,
          101,
          116,
          117,
          112,
          47,
          105,
          99,
          111,
          110,
          46,
          112,
          110,
          103,
        ],
        id: Uint8Array(32) [
          51,
          49,
          49,
          49,
          100,
          48,
          101,
          51,
          52,
          102,
          98,
          50,
          100,
          49,
          49,
          101,
          100,
          49,
          49,
          49,
          57,
          99,
          56,
          49,
          49,
          49,
          49,
          101,
          56,
          49,
          49,
          49,
        ],
        md: Uint8Array(10) [
          67,
          104,
          114,
          111,
          109,
          101,
          99,
          97,
          115,
          116,
        ],
        rm: Uint8Array(16) [
          49,
          49,
          49,
          54,
          70,
          66,
          52,
          55,
          70,
          53,
          49,
          70,
          56,
          49,
          49,
          49,
        ],
        rs: null,
        st: Uint8Array(1) [
          48,
        ],
        ve: Uint8Array(2) [
          48,
          53,
        ],
      },
      RDLENGTH: 146,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 8009,
        priority: 0,
        target: [
          "SomeChromecast",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 8,
      TTL: 120,
      TYPE: 33,
    },
    {
      CLASS: 32769,
      NAME: [
        "SomeChromecast",
        "local",
      ],
      RDATA: [
        "192",
        "168",
        "1 ",
        "4",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 0,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 3,
    OPCODE: 0,
    QDCOUNT: 2,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "SomeChromecast",
        "_googlecast",
        "_tcp",
        "local",
      ],
      QTYPE: 255,
    },
    {
      QCLASS: 1,
      QNAME: [
        "SomeChromecast",
        "local",
      ],
      QTYPE: 255,
    },
  ],
}
`;

snapshot[`Decode message 19`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      RDATA: [
        "E3CA3693F4EB@RuneAudio",
        "_raop",
        "_tcp",
        "local",
      ],
      RDLENGTH: 25,
      TTL: 4180,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 4,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 32769,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_airplay",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_raop",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
    {
      QCLASS: 32769,
      QNAME: [
        "_airplay",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 20`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 16,
      TTL: 4499,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_http",
        "_tcp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;

snapshot[`Decode message 21`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "169",
        "254",
        "22 ",
        "58",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::c5b:7534:952d:163a",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 8,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "Test",
          "_testlargetxt",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 9,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA: true,
        BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB: true,
        CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC: true,
        DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD: true,
        EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE: true,
        FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF: true,
        GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG: true,
        HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH: true,
        IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII: true,
        JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ: true,
        KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK: true,
        LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL: true,
        MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM: true,
        NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN: true,
        OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO: true,
        PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP: true,
        QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ: true,
        RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR: true,
        SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS: true,
        TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT: true,
        UUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU: true,
        VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV: true,
        WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW: true,
        XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX: true,
        YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY: true,
        ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ: true,
        "[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[": true,
        "\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\": true,
        "]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]": true,
        "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^": true,
        _______________________________: true,
        "\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`\`": true,
      },
      RDLENGTH: 1024,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDLENGTH: 2,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testlargetxt",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 9029,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 12,
      TTL: 120,
      TYPE: 33,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 4,
    ARCOUNT: 4,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 22`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testupdate",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "Test",
          "_testupdate",
          "_tcp",
          "local",
        ],
        types: [
          13,
          16,
          33,
        ],
      },
      RDLENGTH: 9,
      TTL: 4500,
      TYPE: 47,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "Test",
        "_testupdate",
        "_tcp",
        "local",
      ],
      RDATA: Uint8Array(14) [
        2,
        80,
        67,
        10,
        87,
        105,
        110,
        100,
        111,
        119,
        115,
        32,
        88,
        80,
      ],
      RDLENGTH: 14,
      TTL: 4500,
      TYPE: 13,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 1,
    ARCOUNT: 1,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 23`] = `
{
  additional: [
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "BOX@TuneBlade",
          "_http",
          "_tcp",
          "local",
        ],
        types: [
          16,
          33,
        ],
      },
      RDLENGTH: 39,
      TTL: 4500,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "7",
        "1",
        "168",
        "192",
        "in-addr",
        "arpa",
      ],
      RDATA: {
        nextDomainName: [
          "7",
          "1",
          "168",
          "192",
          "in-addr",
          "arpa",
        ],
        types: [
          12,
        ],
      },
      RDLENGTH: 30,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "0",
        "3",
        "B",
        "7",
        "C",
        "7",
        "6",
        "1",
        "6",
        "2",
        "A",
        "1",
        "0",
        "C",
        "8",
        "6",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "8",
        "E",
        "F",
        "ip6",
        "arpa",
      ],
      RDATA: {
        nextDomainName: [
          "0",
          "3",
          "B",
          "7",
          "C",
          "7",
          "6",
          "1",
          "6",
          "2",
          "A",
          "1",
          "0",
          "C",
          "8",
          "6",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "0",
          "8",
          "E",
          "F",
          "ip6",
          "arpa",
        ],
        types: [
          12,
        ],
      },
      RDLENGTH: 78,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: {
        nextDomainName: [
          "box",
          "local",
        ],
        types: [
          1,
          28,
        ],
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 47,
    },
    {
      CLASS: 1440,
      NAME: [
      ],
      RDATA: Uint8Array(12) [
        0,
        4,
        0,
        8,
        0,
        11,
        0,
        35,
        20,
        217,
        197,
        208,
      ],
      RDLENGTH: 12,
      TTL: 4500,
      TYPE: 41,
    },
  ],
  answer: [
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        Password: Uint8Array(5) [
          70,
          97,
          108,
          115,
          101,
        ],
      },
      RDLENGTH: 15,
      TTL: 4500,
      TYPE: 16,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 18,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 32,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "BOX@TuneBlade",
        "_http",
        "_tcp",
        "local",
      ],
      RDATA: {
        port: 51497,
        priority: 0,
        target: [
          "box",
          "local",
        ],
        weight: 0,
      },
      RDLENGTH: 17,
      TTL: 120,
      TYPE: 33,
    },
    {
      CLASS: 32769,
      NAME: [
        "7",
        "1",
        "168",
        "192",
        "in-addr",
        "arpa",
      ],
      RDATA: [
        "box",
        "local",
      ],
      RDLENGTH: 11,
      TTL: 120,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "0",
        "3",
        "B",
        "7",
        "C",
        "7",
        "6",
        "1",
        "6",
        "2",
        "A",
        "1",
        "0",
        "C",
        "8",
        "6",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "0",
        "8",
        "E",
        "F",
        "ip6",
        "arpa",
      ],
      RDATA: [
        "box",
        "local",
      ],
      RDLENGTH: 11,
      TTL: 120,
      TYPE: 12,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: [
        "192",
        "168",
        "1 ",
        "7",
      ],
      RDLENGTH: 4,
      TTL: 120,
      TYPE: 1,
    },
    {
      CLASS: 32769,
      NAME: [
        "box",
        "local",
      ],
      RDATA: "fe80::68c0:1a26:167c:7b30",
      RDLENGTH: 16,
      TTL: 120,
      TYPE: 28,
    },
  ],
  authority: [
  ],
  header: {
    AA: 1,
    AD: 0,
    ANCOUNT: 8,
    ARCOUNT: 5,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 0,
    QR: 1,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
  ],
}
`;

snapshot[`Decode message 24`] = `
{
  additional: [
  ],
  answer: [
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_http",
        "_tcp",
        "local",
      ],
      RDLENGTH: 18,
      TTL: 4250,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_dacp",
        "_tcp",
        "local",
      ],
      RDLENGTH: 18,
      TTL: 4451,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_workstation",
        "_tcp",
        "local",
      ],
      RDLENGTH: 25,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_smb",
        "_tcp",
        "local",
      ],
      RDLENGTH: 17,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_device-info",
        "_tcp",
        "local",
      ],
      RDLENGTH: 25,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_teamviewer",
        "_tcp",
        "local",
      ],
      RDLENGTH: 24,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_conductor",
        "_tcp",
        "local",
      ],
      RDLENGTH: 23,
      TTL: 4500,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_calibre",
        "_tcp",
        "local",
      ],
      RDLENGTH: 21,
      TTL: 3600,
      TYPE: 12,
    },
    {
      CLASS: 1,
      NAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      RDATA: [
        "_stanza",
        "_tcp",
        "local",
      ],
      RDLENGTH: 20,
      TTL: 3600,
      TYPE: 12,
    },
  ],
  authority: [
  ],
  header: {
    AA: 0,
    AD: 0,
    ANCOUNT: 9,
    ARCOUNT: 0,
    CD: 0,
    ID: 0,
    NSCOUNT: 0,
    OPCODE: 0,
    QDCOUNT: 1,
    QR: 0,
    RA: 0,
    RCODE: 0,
    RD: 0,
    TC: 0,
    Z: 0,
  },
  question: [
    {
      QCLASS: 1,
      QNAME: [
        "_services",
        "_dns-sd",
        "_udp",
        "local",
      ],
      QTYPE: 12,
    },
  ],
}
`;
